src/tests/snapshots/tiny_lang__tests__test_parser__function_and_call.snap
---
source: src/tests/test_parser.rs
expression: "&ast"
---
Ok(
    [
        Let(
            Ident(
                "a",
            ),
            None,
            Literal(
                UnsignedInteger(
                    445,
                ),
            ),
        ),
        Let(
            Ident(
                "b",
            ),
            None,
            Literal(
                UnsignedInteger(
                    45,
                ),
            ),
        ),
        Function(
            Function {
                name: "sum",
                params: [
                    (
                        Ident(
                            "a",
                        ),
                        UnsignedInteger,
                    ),
                    (
                        Ident(
                            "b",
                        ),
                        UnsignedInteger,
                    ),
                ],
                return_type: Some(
                    UnsignedInteger,
                ),
                body: [
                    If(
                        Condition {
                            condition: Infix(
                                NotEqual,
                                Ident(
                                    Ident(
                                        "a",
                                    ),
                                ),
                                Literal(
                                    UnsignedInteger(
                                        0,
                                    ),
                                ),
                            ),
                            if_body: [
                                Let(
                                    Ident(
                                        "c",
                                    ),
                                    None,
                                    Infix(
                                        Plus,
                                        Ident(
                                            Ident(
                                                "a",
                                            ),
                                        ),
                                        Ident(
                                            Ident(
                                                "b",
                                            ),
                                        ),
                                    ),
                                ),
                                Return(
                                    Ident(
                                        Ident(
                                            "c",
                                        ),
                                    ),
                                ),
                            ],
                            else_body: Some(
                                [
                                    Return(
                                        Ident(
                                            Ident(
                                                "b",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
        Expr(
            Call(
                FunctionCall {
                    parameters: [
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                        Ident(
                            Ident(
                                "b",
                            ),
                        ),
                    ],
                    name: "sum",
                },
            ),
        ),
    ],
)
