src/tests/snapshots/tiny_lang__tests__test_parser__function_parsing.snap
---
source: src/tests/test_parser.rs
expression: "Parser::new(\"\", code).parse()"
---
Ok(
    [
        Function(
            Function {
                name: "return_something",
                params: [
                    (
                        Ident(
                            "a",
                        ),
                        UnsignedInteger,
                    ),
                ],
                return_type: Some(
                    Bool,
                ),
                body: [
                    Let(
                        Ident(
                            "something",
                        ),
                        None,
                        Literal(
                            Bool(
                                false,
                            ),
                        ),
                    ),
                    Let(
                        Ident(
                            "another_var",
                        ),
                        None,
                        Infix(
                            Plus,
                            Literal(
                                UnsignedInteger(
                                    3535,
                                ),
                            ),
                            Literal(
                                UnsignedInteger(
                                    35,
                                ),
                            ),
                        ),
                    ),
                    Return(
                        Ident(
                            Ident(
                                "something",
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
)
