src/tests/snapshots/tiny_lang__tests__test_parser__while_and_assignement.snap
---
source: src/tests/test_parser.rs
assertion_line: 183
expression: "&ast"
---
Ok(
    [
        Let(
            Ident(
                "i",
            ),
            None,
            Literal(
                UnsignedInteger(
                    0,
                ),
            ),
        ),
        While(
            While {
                condition: Infix(
                    LessThan,
                    Ident(
                        Ident(
                            "i",
                        ),
                    ),
                    Literal(
                        UnsignedInteger(
                            5,
                        ),
                    ),
                ),
                body: [
                    Expr(
                        Call(
                            FunctionCall {
                                parameters: [
                                    Ident(
                                        Ident(
                                            "i",
                                        ),
                                    ),
                                ],
                                name: "print",
                            },
                        ),
                    ),
                    Expr(
                        Call(
                            FunctionCall {
                                parameters: [
                                    Literal(
                                        Char(
                                            '\n',
                                        ),
                                    ),
                                ],
                                name: "print",
                            },
                        ),
                    ),
                    Mutate(
                        Ident(
                            "i",
                        ),
                        Infix(
                            Plus,
                            Ident(
                                Ident(
                                    "i",
                                ),
                            ),
                            Literal(
                                UnsignedInteger(
                                    1,
                                ),
                            ),
                        ),
                        false,
                    ),
                ],
            },
        ),
    ],
)
